Add comprehensive airline database with 200+ international airlines and baggage regulations

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Prüfen Sie kostenlos die Handgepäck- und Gepäckbestimmungen von über 100 Fluggesellschaften. Vermeiden Sie teure Überraschungen am Flughafen." />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <title>Handgepäck Prüfer - Gepäckbestimmungen aller Airlines kostenlos prüfen</title>
   </head>
   <body>
